<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cocktails"
            android:icon="@drawable/cocktails"
            android:title="@string/menu_cocktails" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ingredients"
            android:title="@string/menu_ingredients" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favourite"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping_cart"
            android:title="@string/menu_shopping" />
    </group>

    <group android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account"
            android:title="@string/menu_account"/>
    </group>

</menu>